--- a/first-project-app/package.json
+++ b/first-project-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "first-project-npm",
+  "name": "first-project-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,7 +7,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.1.1",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "web-vitals": "^4.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -15,7 +16,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "eslintConfig": {   
+  "eslintConfig": {
     "extends": [
       "react-app",
       "react-app/jest"
